<resources>
    <string name="username">Username</string>
    <string name="registerhere">Register here</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="Phn">Phone Number</string>
    <string name="email">Email</string>
    <string name="pass">Enter Password</string>
    <string name="uname">Username</string>
    <string name="cpass">Confirm Password</string>
    <string name="login">LOGIN</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="already_a_member_login">Already a Member? Login</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="action_settings">Settings</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="tolet">TOLET</string>
    <string name="enter_the_location">Enter the Location</string>
    <string name="app_name">Tolet</string>
    <string name="post">Post</string>
    <string name="my_posts">My Posts</string>
    <string name="home">Home</string>
    <string name="post_your_house">Post Your House</string>
    <string name="Banquet_halls">Banquet Halls</string>
    <string name="choose">Choose what You are Posting</string>
    <string name="house">House</string>
    <string name="or">OR</string>
    <string name="type_prompt">Choose the Type of House</string>
    <string name="enter_details">Enter Details</string>
    <string-array name="type_arrays">
        <item>Independent</item>
        <item>Apartment</item>
    </string-array>
    <string name="bdrooms_prompt">BHK</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_complete_address">Enter Complete Address</string>
    <string name="facilities">Facilities:</string>
    <string name="water_facility">Water Facility</string>
    <string name="electricity_facility">Electricity Facility</string>
    <string name="parking_facility">Parking Facility</string>
    <string name="security">Security</string>
    <string name="enter_the_rent">Enter the Rent</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="upload_an_image_of_the_house">Upload an Image of the House:</string>
    <string name="name_of_banquet_hall">Name of Banquet Hall</string>
    <string name="ac_non">A/C or Non A/C</string>
    <string name="capacity_of_hall">Capacity of Hall</string>
    <string name="decoration_facility">Decoration Facility</string>
    <string name="enter_the_rent_per_day">Enter the Rent per Day</string>
    <string name="upload_an_image_of_hall">Upload an Image of Hall</string>
    <string name="owner_name">Owner Name</string>
    <string name="houses">Houses</string>
    <string name="details">Details</string>
    <string name="owner">Owner Name : </string>
    <string name="type_of_house">Type of House : </string>
    <string name="room">Room : </string>
    <string name="rent">Rent : </string>
    <string name="contact_no">Contact No :</string>
    <string name="_3bhk">3BHK</string>
    <string name="type">Type : </string>
    <string name="capaciy">Capacity :</string>
    <string name="contact">Contact :</string>
    <string name="address">Address :</string>
    <string name="apartment">Apartment</string>
    <string-array name="bdrooms_arrays">
        <item>1BHK</item>
        <item>2BHK</item>
        <item>3BHK</item>
        <item>4BHK</item>
    </string-array>
    <string-array name="ac">
        <item>A/C</item>
        <item>Non A/C</item>
    </string-array>
</resources>
