<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/house2"
    tools:context=".Choose">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:textSize="28sp"
        android:fontFamily="@font/futur"
        android:textStyle="bold"
        android:textColor="@color/darkblue"
        android:textAlignment="center"
        android:paddingTop="20dp"
        android:background="@color/white"/>

    <Button
        android:id="@+id/banquet"
        android:layout_width="301dp"
        android:layout_height="66dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="120dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:text="@string/Banquet_halls"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="158dp" />

    <Button
        android:id="@+id/house"
        android:layout_width="293dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="295dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:text="@string/house"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="273dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="218dp"
        android:background="@color/white"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="245dp" />


</RelativeLayout>