<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/house"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/relative">

    <TextView
        android:id="@+id/textView"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:textAlignment="center"
        android:background="@color/white"
        android:text="@string/login"
        android:textColor="@color/purple"
        android:fontFamily="@font/futur"
        android:textSize="45sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/email"
        android:layout_width="308dp"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_action_user"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="310dp"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="153dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="148dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/register"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="97dp"
        android:text="@string/registerhere"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:textSize="23sp"
        android:textStyle="bold" />
</RelativeLayout>