<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:gravity="center">

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imagebtn" />
    <TextView
        android:id="@+id/textview"
        android:textSize="25sp"
        android:textColor="#000000"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/type"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"/>
        <TextView
            android:id="@+id/type"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/capaciy"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"/>
        <TextView
            android:id="@+id/capacity"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/capaciy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/rent"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"/>
            <TextView
                android:id="@+id/rent"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginEnd="15dp"/>

            <TextView
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/contact"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"/>
            <TextView
                android:id="@+id/phn"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/capaciy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/address"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"/>
    <TextView
        android:id="@+id/address"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/capaciy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"/>


</LinearLayout>